# ApiDeskReview

./: .gitignore  AI_DOCUMENTS_API.md  AUDIT_API_DOCUMENTATION.md  BAAI_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  check_compatibility.py  dev-requirements.txt  process_all_documents_baai.py  process_documents.py  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  test_ai_documents_api.py  test_ai_process.py  test_api_endpoints.py  test_audit_api.py  test_baai_integration.py  test_curl.ps1  test_final_integration.py  test_hybrid_with_chunks.py  test_request_example.json  test_search.py  test_search_lower_threshold.py  test_vector_processing.py
JSON/: AzzuleAI.AIDynamicPrompts.json
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  ai_documents.py  ai_process.py  audit.py  baai_search.py  health.py  vector_search.py
app/core/: config.py
app/models/: __init__.py  ai_document.py  audit.py
app/schemas/: __init__.py  ai_document.py  ai_process.py  audit.py  baai_search.py  base.py  vector_search.py
app/services/: __init__.py  ai_document_service.py  ai_process_service.py  ai_service.py  audit_service.py  baai_document_processor.py  baai_embedding_service.py  baai_vector_store.py  database.py  document_processor.py  embedding_service.py  sqlserver_service.py  vector_store.py
app/utils/: logger.py
tests/: test_config.py  test_main.py
